<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_pkmn">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        tools:context=".ui.main.PokemonProfileFragment">

        <TextView
            android:id="@+id/pkmn_id_txtView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/pkmn_id_text"
            android:textColor="@android:color/darker_gray"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/user_login_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/user_login_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:text="@string/pkmn_name_text"
            android:textColor="@color/white"
            android:textSize="32sp"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/pkmn_id_txtView" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/infos_cardView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginTop="12dp"
            android:backgroundTint="@color/app_theme_secondary_color"
            android:paddingHorizontal="200dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="10dp"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/pkmn_types_text"
            app:strokeColor="@color/app_theme_main_color"
            app:strokeWidth="4dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/pkmn_category_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pkmn_category_text"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:layout_marginTop="12dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <TextView
                    android:id="@+id/pkmn_desc_txtView"
                    android:layout_width="350dp"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="8dp"
                    android:paddingHorizontal="16sp"
                    android:text="@string/pkmn_description_text"
                    android:textColor="@color/white"
                    android:textSize="@dimen/profile_data_text_size"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/pkmn_category_text" />


                <TextView
                    android:id="@+id/pkmn_weight_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:paddingVertical="12dp"
                    android:text="@string/weight"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/pkmn_height_text"
                    app:layout_constraintTop_toBottomOf="@id/pkmn_desc_txtView" />


                <TextView
                    android:id="@+id/pkmn_height_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingVertical="12dp"
                    android:text="@string/pkmn_height_text"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/pkmn_weight_text"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/pkmn_desc_txtView"

                    />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:id="@+id/pkmn_types_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="12dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/pkmn_types_text"
            android:textColor="@color/white"
            android:textSize="@dimen/profile_data_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/pkmn_avatar" />


        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/pkmn_avatar"
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:layout_marginVertical="8dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/profile_picture_desc"
            android:scaleType="centerCrop"
            android:src="@drawable/cat"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/user_login_text"
            app:shapeAppearance="@style/RoundedSquare"
            tools:srcCompat="@tools:sample/avatars"

            />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>