<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@android:color/black"
        android:theme="@style/Theme.Swifty_companion.AppBarOverlay">

        <androidx.cardview.widget.CardView
            android:id="@+id/search_bar_cardview_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            app:contentPadding="2dp"
            app:cardElevation="4dp"
            app:cardCornerRadius="10dp"
            app:cardBackgroundColor="@color/app_theme_main_color">

            <ImageButton
                android:id="@+id/me_button"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center_vertical|start"
                android:layout_marginHorizontal="28dp"
                android:contentDescription="@string/logout_button_desc"
                android:src="@drawable/dice"
                android:background="@android:color/transparent"
                app:layout_constraintStart_toEndOf="@id/search_user_searchView"
                app:layout_constraintBottom_toTopOf="@id/spinner"

                />

            <androidx.appcompat.widget.SearchView
                android:id="@+id/search_user_searchView"
                android:layout_width="250dp"
                android:layout_height="60dp"

                app:iconifiedByDefault="false"
                android:imeOptions="actionSearch"
                android:inputType="textPersonName"
                app:queryHint="name"
                android:focusable="true"
                android:clickable="true"


                android:layout_gravity="center"
                app:queryBackground="@color/app_theme_secondary_color"
                app:submitBackground="@android:color/holo_green_light"
                android:layout_marginVertical="10dp"
                />
            <ImageButton
                android:id="@+id/logout_button"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center_vertical|end"
                android:layout_marginHorizontal="16dp"
                android:contentDescription="@string/logout_button_desc"
                android:src="@drawable/ic_logout"
                android:background="@android:color/transparent"
                app:layout_constraintStart_toEndOf="@id/search_user_searchView"
                app:layout_constraintBottom_toTopOf="@id/spinner"

                />


        </androidx.cardview.widget.CardView>

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:dropDownWidth="wrap_content"
            android:gravity="fill"
            android:spinnerMode="dropdown"
            android:layout_marginVertical="16dp"
            android:layout_marginHorizontal="16dp"
            android:background="#4F4E0101"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/search_user_searchView"/>

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabs"
            android:contentDescription="@string/tabs_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:tabTextColor="@color/app_theme_tertiary_color"
            android:background="@android:color/black"
            app:tabBackground="@color/app_theme_main_color" />


    </com.google.android.material.appbar.AppBarLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="600dp"
        android:contentDescription="@string/view_pager_desc"

        app:layout_constraintTop_toBottomOf="@id/appBar"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        />

</androidx.constraintlayout.widget.ConstraintLayout>